# TrajOpt

./: .gitignore  README.md  pyproject.toml
opt/: calc.py  opt.py  opt_parking.py  opt_traj.py  queue.py  stats.py  vis.py
opt/model/: b3dc_LT.py  bi_3dof_ddelta.py  dual_7dof.py  dual_7dof_noa.py  kine_3dof.py  kine_3dof_line.py
opt/search/: a_star.py  grid.py  queue.py
scripts/centerline/: app.py  config.yaml  demo.py
scripts/centerline/data/: centerline_opt.yaml
scripts/doublelanechange/: 1_bezier_DLC.py  fig_1_DLC.py  fig_2_DLC_speed_up.py  fig_DLC_speed_up.py  fig_thesis_DLC.py  fig_thesis_DLC_speed_up.py
scripts/doublelanechange/data/: reference_DLC.yaml  reference_DLC_speed_up.yaml
scripts/mintimetraj/: 1_simple_model.py  config.yaml  tempCodeRunnerFile.py
scripts/mintimetraj/1_simple_model/: 1_simple_model.py  config.yaml
scripts/mintimetraj/2_LT_nonlinear/: 2_LT_nonlinear.py  config.yaml
scripts/mintimetraj/3_7dof/: 3_7dof.py  config.yaml
scripts/mintimetraj/3_7dof_noa/: 3_7dof_noa.py  config.yaml
scripts/mintimetraj/4_7dof/: 4_7dof.py  config.yaml
scripts/referenceline/: 1_right_reference.py  2_s_validate.py  3_free_opt_test.py  4_free_opt_sparse.py  5_free_opt_dense.py  6_bound.py  6_free_opt_irregular.py
scripts/straightline/: straight.py
tests/Centerline_Extraction/: tempCodeRunnerFile.py  test.py  test.txt
tests/Simple/: simple.py
tests/python/: 1_test_python_mod.py  2_numpy.py  3_dataclasses.py  4_casadi_concat.py  5_matplot_annotate.py  6_matplot_squarecar.py  7_line_intersection.py  8_graph_vis.py  9_heapq.py  param.yaml
(+59 files in other folders)
